Release info
============

You can see the complete list of recent changes, bugfixes and new features
in the http://repo.or.cz/w/elinks.git[gitweb interface]. See the ChangeLog
file for details.

ELinks 0.13.GIT now:
--------------------

To be released as ELinks 0.13.0.

ELinks 0.12.GIT now:
--------------------

To be released as ELinks 0.12.0.

//////////////////////////////////////////////////////////////////////
This list now contains all the important changes from ELinks 0.11.0 to
ELinks 0.12.GIT (21052fafb0be0b87b7f376fb4edfa70304e365cc) and related
bug numbers.  Each section is sorted by severity and grouped by topic.

The list no doubt includes several changes that are not really
important enough.  Please move them to the separate "should be removed
from NEWS" list below, or coalesce several changes into one entry (but
do list all bug numbers).
//////////////////////////////////////////////////////////////////////

Notable new features:

* enhancement 822: UTF-8 as terminal charset, not merely UTF-8 I/O
  of a unibyte codepage as in previous versions.  Double-cell (aka
  fullwidth) and supplementary characters work too, but combining
  characters and right-to-left text do not.  The only multibyte
  charset ELinks can decode is still UTF-8, so if the server outputs
  e.g. Shift-JIS, you'd better recode with a proxy.  See more notes
  in features.conf.
* enhancement 844: SMB protocol using libsmbclient.  This replaces
  the smbclient-based code that was disabled in ELinks 0.11.2.

Incompatibilities:

* ECMAScript support is now disabled by default.  It has known
  bugs 548 and 771 with which malicious web pages can hang ELinks,
  and its security goals are undocumented.  If you must enable
  ECMAScript support, it would be prudent to restrict the ELinks
  process with a sandbox of some kind.
* ECMAScript support no longer works with SpiderMonkey versions
  earlier than JS1.5 RC3a.
* Gzip decompression support now requires zlib 1.2.0.2 or later.